--- a/demo/button.htm
+++ b/demo/button.htm
@@ -23,7 +23,8 @@
 
             paymentToken: button.props.paymentToken,
             onPaymentAuthorize: button.props.onPaymentAuthorize,
-            onPaymentComplete: button.props.onPaymentComplete
+            onPaymentComplete: button.props.onPaymentComplete,
+            onPaymentCancel: button.props.onPaymentCancel
         });
 
         if (button.props.submitForm) {
