--- a/demo/merchant_legacy.htm
+++ b/demo/merchant_legacy.htm
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <style>
     iframe {
         border: 1px dashed grey;
