--- a/demo/merchant_lightbox.htm
+++ b/demo/merchant_lightbox.htm
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<style>
-    iframe {
-        border: 1px dashed grey;
-    }
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
+<style>
     form {
         border: 1px dashed lightblue;
         display: inline-block;
