Use correct format of mock window urls

--- a/demo/merchant_legacy_lightbox.htm
+++ b/demo/merchant_legacy_lightbox.htm
@@ -18,7 +18,7 @@
 
 <script>
 
-    window.mockDomain = 'http://www.merchant.com';
+    window.mockDomain = 'mock://www.merchant.com';
 
     ppxo.PayPalCheckout.contexts.lightbox = true;
 
