--- a/demo/merchant_buttonJS.html
+++ b/demo/merchant_buttonJS.html
@@ -18,7 +18,7 @@
 
 <script>
 
-    window.mockDomain = 'http://www.merchant.com';
+    window.mockDomain = 'mock://www.merchant.com';
 
     ppxo.postRobot.openBridge('./bridge.htm');
 
