--- a/demo/merchant_legacy.htm
+++ b/demo/merchant_legacy.htm
@@ -22,7 +22,7 @@
 
 <script>
 
-    window.mockDomain = 'http://www.merchant.com';
+    window.mockDomain = 'mock://www.merchant.com';
 
     ppxo.postRobot.openBridge('./bridge.htm');
 
