--- a/demo/merchant_lightbox.htm
+++ b/demo/merchant_lightbox.htm
@@ -80,7 +80,7 @@
 
 <script>
 
-    window.mockDomain = 'http://www.merchant.com';
+    window.mockDomain = 'mock://www.merchant.com';
 
     ppxo.postRobot.openBridge('./bridge.htm');
 
