--- a/live_demo/merchant_legacy.htm
+++ b/live_demo/merchant_legacy.htm
@@ -7,7 +7,7 @@
 
 <script   src="https://code.jquery.com/jquery-1.12.4.js"   integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="   crossorigin="anonymous"></script>
 
-<script src="../dist/paypal.checkout.v4.js" data-env="local"></script>
+<script src="../dist/paypal.checkout.v4.js" data-env="local" data-paypal-checkout></script>
 
 <script>
 
