Replace ppxo with paypal

--- a/demo/addcontent.html
+++ b/demo/addcontent.html
@@ -18,7 +18,7 @@
 <script>
     var ecToken;
 
-    var checkout = ppxo.PayPalCheckout.attach({
+    var checkout = paypal.PayPalCheckout.attach({
         onEnter: function() {
             this.props.paymentToken().then(function(token) {
                 ecToken = token;
