--- a/demo/checkout.htm
+++ b/demo/checkout.htm
@@ -32,7 +32,7 @@
 
             var ecToken;
 
-            var checkout = ppxo.PayPalCheckout.attach({
+            var checkout = paypal.PayPalCheckout.attach({
 
                 onEnter: function() {
 
