--- a/demo/merchant.htm
+++ b/demo/merchant.htm
@@ -86,7 +86,7 @@
 
     window.mockDomain = 'mock://www.merchant.com';
 
-    ppxo.postRobot.openBridge('./bridge.htm');
+    paypal.postRobot.openBridge('./bridge.htm');
 
     function paymentToken(resolve) {
         $.get('./token.htm?ts=' + Date.now()).then(function(result) {
@@ -110,7 +110,7 @@
 
     // 1. Button in iframe
 
-    ppxo.PayPalButton.init({
+    paypal.PayPalButton.init({
 
         url: './button.htm',
 
@@ -127,7 +127,7 @@
 
     function openPayPalCheckout() {
 
-        var checkout = ppxo.PayPalCheckout.init({
+        var checkout = paypal.PayPalCheckout.init({
 
             url: './checkout.htm',
 
@@ -144,7 +144,7 @@
 
     // 3. Standard merchant-owned link with href
 
-    var checkout = ppxo.PayPalCheckout.init({
+    var checkout = paypal.PayPalCheckout.init({
 
         paymentToken: paymentToken,
         onPaymentAuthorize: onPaymentAuthorize
@@ -159,7 +159,7 @@
 
     // 4. Standard merchant-owned form with target
 
-    var checkout = ppxo.PayPalCheckout.init({
+    var checkout = paypal.PayPalCheckout.init({
 
         paymentToken: paymentToken,
         onPaymentAuthorize: onPaymentAuthorize
@@ -174,7 +174,7 @@
 
     // 5. Standard merchant-owned form with target, button in iframe
 
-    ppxo.PayPalButton.init({
+    paypal.PayPalButton.init({
 
         url: './button.htm',
 
@@ -189,7 +189,7 @@
 
     function addcontentCheckout() {
 
-        var checkout = ppxo.PayPalCheckout.init({
+        var checkout = paypal.PayPalCheckout.init({
 
             url: './addcontent.html',
 
@@ -207,7 +207,7 @@
 
     function openPayPalCheckoutError() {
 
-        var checkout = ppxo.PayPalCheckout.init({
+        var checkout = paypal.PayPalCheckout.init({
 
             url: './checkout.htm',
 
