Add button tests

--- a/test/checkout.htm
+++ b/test/checkout.htm
@@ -5,5 +5,7 @@
         window.console = parentWindow.console;
     </script>
 
-    <script src="/base/test/child.js"></script>
+    <script src="/base/test/checkout.js"></script>
 </body>
+
+<h1>Checkout</h1>
