--- a/test/childRedirect.htm
+++ b/test/childRedirect.htm
@@ -1,4 +1,4 @@
 
 <script>
-    window.location = 'child.htm?token=EC-XXXXXXXXXXXXXXXXX#redirectHash';
+    window.location = '/base/test/checkout.htm?token=EC-XXXXXXXXXXXXXXXXX#redirectHash';
 </script>
