--- a/test/childRedirect.htm
+++ b/test/childRedirect.htm
@@ -1,4 +1,5 @@
 
 <script>
+    window.mockDomain = 'mock://www.some-site.com';
     window.location = '/base/test/checkout.htm?token=EC-XXXXXXXXXXXXXXXXX#redirectHash';
 </script>
