--- a/test/checkout.htm
+++ b/test/checkout.htm
@@ -1,5 +1,6 @@
 <body>
     <script>
+        window.mockDomain = 'mock://www.paypal.com';
         var parentWindow = (window.opener || window.parent);
         window.__coverage__ = parentWindow.__coverage__;
     </script>
