Refactor test file structure

--- a/test/windows/bridge/index.htm
+++ b/test/windows/bridge/index.htm
@@ -8,5 +8,5 @@
         window.__coverage__ = parentWindow.__coverage__;
     </script>
 
-    <script src="/base/test/bridge.js"></script>
+    <script src="./index.js"></script>
 </body>
