--- a/test/windows/fallback/index.htm
+++ b/test/windows/fallback/index.htm
@@ -1,8 +1,6 @@
 
 <body>
-    <h1>Button</h1>
-
-    <button id="button">Click me</button>
+    <h1>Fallback</h1>
 
     <script>
         window.mockDomain = 'mock://www.paypal.com';
@@ -10,5 +8,7 @@
         window.__coverage__ = parentWindow.__coverage__;
     </script>
 
-    <script src="/base/test/button.js"></script>
+    <script src="./index.js"></script>
+
+    <p>merchantpaymentweb</p>
 </body>
