Fix link to checkout.js in demos

--- a/demo/angular.htm
+++ b/demo/angular.htm
@@ -1,5 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.9/angular.js"></script>
-<script src="http://bluesuncorp.co.uk/icv4/dist/checkout.js" data-paypal-checkout></script>
+<script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
 <script>
     angular.module('app', ['paypal-button']).controller('appController', function($scope) {
