--- a/demo/button.htm
+++ b/demo/button.htm
@@ -1,7 +1,7 @@
 
 <div id="paypal-button"></div>
 
-<script src="https://www.paypalobjects.com/api/checkout.js" data-version-4></script>
+<script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
 <script>
     paypal.Button.render({
