--- a/demo/react.htm
+++ b/demo/react.htm
@@ -3,7 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.38/browser.js"></script>
-<script src="http://bluesuncorp.co.uk/icv4/dist/checkout.js" data-paypal-checkout></script>
+<script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
 <div id="page"></div>
 
