--- a/test/windows/redirect/index.htm
+++ b/test/windows/redirect/index.htm
@@ -1,5 +1,5 @@
 
 <script>
     window.mockDomain = 'mock://www.some-site.com';
-    window.location = '/base/test/windows/checkout/index.htm?token=EC-XXXXXXXXXXXXXXXXX#redirectHash';
+    window.location = '/base/test/windows/checkout/index.htm?token=EC-XXXXXXXXXXXXXXXXX#' + window.location.hash.replace('#', '');
 </script>
