Simplify and comment code examples

--- a/sampleApp/public/html/braintree.html
+++ b/sampleApp/public/html/braintree.html
@@ -35,14 +35,13 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../?page=basic">Basic</a></li>
+                    <li><a href="../?page=basic">Client Side EC</a></li>
+                    <li><a href="../?page=serverside">Server Side EC</a></li>
+                    <li class="active"><a href="../?page=braintree">Braintree</a> </li>
                     <li><a href="../?page=agreements">Billing Agreements</a></li>
-                    <li class="active"><a href="../?page=braintree">Braintree V.zero</a> </li>
-                    <li><a href="../?page=serverside">Server Side</a></li>
-                    <li><a href="../?page=confirmation">Confirmation Page</a></li>
                     <li><a href="../?page=buttonStyles">Button Styles</a></li>
+                    <li><a href="../?page=confirmation">Confirmation Page</a></li>
                     <li><a href="../?page=mark">Mark Integration</a></li>
-                    <li><a href="../?page=hybrid">Hybrid Integrations</a></li>
                 </ul>
             </div>
         </div>
