--- a/sampleApp/public/html/confirmation.html
+++ b/sampleApp/public/html/confirmation.html
@@ -34,14 +34,13 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="../?page=basic">Basic</a></li>
+                    <li><a href="../?page=basic">Client Side EC</a></li>
+                    <li><a href="../?page=serverside">Server Side EC</a></li>
+                    <li><a href="../?page=braintree">Braintree</a> </li>
                     <li><a href="../?page=agreements">Billing Agreements</a></li>
-                    <li><a href="../?page=braintree">Braintree V.zero</a> </li>
-                    <li><a href="../?page=serverside">Server Side</a></li>
-                    <li class="active"><a href="../?page=confirmation">Confirmation Page</a></li>
                     <li><a href="../?page=buttonStyles">Button Styles</a></li>
+                    <li class="active"><a href="../?page=confirmation">Confirmation Page</a></li>
                     <li><a href="../?page=mark">Mark Integration</a></li>
-                    <li><a href="../?page=hybrid">Hybrid Integrations</a></li>
                 </ul>
             </div>
         </div>
@@ -60,7 +59,26 @@
         <p>Excellent watch <br> for only <strong>$1.00 USD</strong></p>
         <p>Checkout using Paypal</p>
         <div id="myContainerElement"></div>
-        <div id="thankyou"></div>
+
+        <div id="confirm" style="display: none">
+            <hr />
+
+            <p><strong>Name:</strong>    <span id="recipient"></span></p>
+            <p><strong>Address:</strong> <span id="address"></span></p>
+            <p><strong>City:</strong>    <span id="city"></span></p>
+            <p><strong>State:</strong>   <span id="state"></span></p>
+            <p><strong>Zip:</strong>     <span id="zip"></span></p>
+            <p><strong>Country:</strong> <span id="country"></span></p>
+
+            <button id="confirmButton" class="btn-primary">Confirm Payment</button>
+        </div>
+
+        <div id="thanks" style="display: none">
+            <div class="jumbotron">
+                <h1>Thank you <span id="thanksname"></span> for your payment</h1>
+                <p>We have completed your payment</p>
+            </div>
+        </div>
     </div>
 
     <ul class="nav nav-tabs right">
