--- a/sampleApp/public/html/index.htm
+++ b/sampleApp/public/html/index.htm
@@ -19,14 +19,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="html/basic.html">Basic Integration</a></li>
+                    <li class="active"><a href="../?page=basic">Client Side EC</a></li>
+                    <li><a href="../?page=serverside">Server Side EC</a></li>
+                    <li><a href="../?page=braintree">Braintree</a> </li>
                     <li><a href="../?page=agreements">Billing Agreements</a></li>
-                    <li><a href="html/braintree.html">Braintree V.zero Integration</a> </li>
-                    <li><a href="html/serverside.html">Server Side Integration</a></li>
-                    <li><a href="html/confirmation.html">Confirmation Page Integration</a></li>
-                    <li><a href="html/buttonStyles.html">Button Styles</a></li>
-                    <li><a href="html/mark.html">Mark Integration</a></li>
-                    <li><a href="html/hybrid.html">Hybrid Integrations</a></li>
+                    <li><a href="../?page=buttonStyles">Button Styles</a></li>
+                    <li><a href="../?page=confirmation">Confirmation Page</a></li>
+                    <li><a href="../?page=mark">Mark Integration</a></li>
                 </ul>
             </div>
         </div>
