Build and use checkout.js once for all tests windows

--- a/test/windows/button/index.htm
+++ b/test/windows/button/index.htm
@@ -10,5 +10,7 @@
         window.__coverage__ = parentWindow.__coverage__;
     </script>
 
+    <script src="/base/node_modules/babel-polyfill/dist/polyfill.js"></script>
+    <script src="/base/src/load.js"></script>
     <script src="./index.js"></script>
 </body>
