--- a/test/windows/fallback/index.htm
+++ b/test/windows/fallback/index.htm
@@ -8,6 +8,8 @@
         window.__coverage__ = parentWindow.__coverage__;
     </script>
 
+    <script src="/base/node_modules/babel-polyfill/dist/polyfill.js"></script>
+    <script src="/base/src/load.js"></script>
     <script src="./index.js"></script>
 
     <p>merchantpaymentweb</p>
