--- a/test/windows/checkout/index.htm
+++ b/test/windows/checkout/index.htm
@@ -6,7 +6,7 @@
     </script>
 
     <script src="/base/node_modules/babel-polyfill/dist/polyfill.js"></script>
-    <script src="/base/src/load.js"></script>
+    <script src="/base/src/load.js" data-paypal-checkout></script>
     <script src="./index.js"></script>
 </body>
 
