--- a/demo/dev/bridge.htm
+++ b/demo/dev/bridge.htm
@@ -3,5 +3,5 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../../dist/checkout.js" data-paypal-checkout></script>
+    <script src="../../dist/checkout.js" data-paypal-checkout data-env="demo"></script>
 </head>
