--- a/demo/dev/checkout.htm
+++ b/demo/dev/checkout.htm
@@ -19,6 +19,7 @@
 
         document.querySelector('#paypal-pay').addEventListener('click', function() {
             window.xprops.onAuthorize({
+                paymentToken: 'EC-XXXXXXXXXX',
                 paymentID: 'PAY-XXXXXXXXXXXXXXXX',
                 returnUrl: 'http://google.com?action=return&token=EC-XXXXXXXXXXXXXXXXX&PayerID=YYYYYYYYYYYYYYYYY',
                 cancelUrl: 'http://google.com?action=cancel&token=EC-XXXXXXXXXXXXXXXXX'
@@ -27,6 +28,7 @@
 
         document.querySelector('#paypal-cancel').addEventListener('click', function() {
             window.xprops.onCancel({
+                paymentToken: 'EC-XXXXXXXXXX',
                 paymentID: 'PAY-XXXXXXXXXXXXXXXX',
                 returnUrl: 'http://google.com?action=return&token=EC-XXXXXXXXXXXXXXXXX&PayerID=YYYYYYYYYYYYYYYYY',
                 cancelUrl: 'http://google.com?action=cancel&token=EC-XXXXXXXXXXXXXXXXX'
