Fade in button from prerender template

--- a/demo/dev/button.htm
+++ b/demo/dev/button.htm
@@ -57,7 +57,7 @@
         });
 
         document.querySelector('#paypal-button-iframe').addEventListener('click', function() {
-            paypal.Checkout.contexts.iframe = true;
+            paypal.enableCheckoutIframe();
             renderCheckout();
         });
     </script>
