--- a/demo/angular.htm
+++ b/demo/angular.htm
@@ -2,42 +2,45 @@
 <script src="https://www.paypalobjects.com/api/checkout.js"></script>
 
 <script>
-    angular.module('app', ['paypal-button']).controller('appController', function($scope) {
+    paypal.Button.driver('angular', window.angular);
 
-        $scope.opts = {
+    angular.module('app', [ 'paypal-button' ])
+        .controller('appController', function($scope) {
 
-            env: 'production',
+            $scope.opts = {
 
-            client: {
-                sandbox:    'AWi18rxt26-hrueMoPZ0tpGEOJnNT4QkiMQst9pYgaQNAfS1FLFxkxQuiaqRBj1vV5PmgHX_jA_c1ncL',
-                production: 'AVZhosFzrnZ5Mf3tiOxAD0M6NHv8pcB2IFNHAfp_h69mmbd-LElFYkJUSII3Y0FPbm7S7lxBuqWImLbl'
-            },
+                env: 'production',
 
-            payment: function() {
+                client: {
+                    sandbox:    'AWi18rxt26-hrueMoPZ0tpGEOJnNT4QkiMQst9pYgaQNAfS1FLFxkxQuiaqRBj1vV5PmgHX_jA_c1ncL',
+                    production: 'AVZhosFzrnZ5Mf3tiOxAD0M6NHv8pcB2IFNHAfp_h69mmbd-LElFYkJUSII3Y0FPbm7S7lxBuqWImLbl'
+                },
 
-                var env    = this.props.env;
-                var client = this.props.client;
+                payment: function() {
 
-                return paypal.rest.payment.create(env, client, {
-                    transactions: [
-                        {
-                            amount: { total: '1.00', currency: 'USD' }
-                        }
-                    ]
-                });
-            },
+                    var env    = this.props.env;
+                    var client = this.props.client;
 
-            commit: true, // Optional: show a 'Pay Now' button in the checkout flow
+                    return paypal.rest.payment.create(env, client, {
+                        transactions: [
+                            {
+                                amount: { total: '1.00', currency: 'USD' }
+                            }
+                        ]
+                    });
+                },
 
-            onAuthorize: function(data, actions) {
+                commit: true, // Optional: show a 'Pay Now' button in the checkout flow
 
-                // Optional: display a confirmation page here
+                onAuthorize: function(data, actions) {
 
-                return actions.payment.execute().then(function() {
-                    // Show a success page to the buyer
-                });
-            }
-        };
+                    // Optional: display a confirmation page here
+
+                    return actions.payment.execute().then(function() {
+                        // Show a success page to the buyer
+                    });
+                }
+            };
 
     });
 </script>
