Remove production client id from demos

--- a/demo/angular2.htm
+++ b/demo/angular2.htm
@@ -33,11 +33,11 @@
         })
         class AppComponent {
 
-            env = 'production'
+            env = 'sandbox'
 
             client = {
                 sandbox:    'AWi18rxt26-hrueMoPZ0tpGEOJnNT4QkiMQst9pYgaQNAfS1FLFxkxQuiaqRBj1vV5PmgHX_jA_c1ncL',
-                production: 'AVZhosFzrnZ5Mf3tiOxAD0M6NHv8pcB2IFNHAfp_h69mmbd-LElFYkJUSII3Y0FPbm7S7lxBuqWImLbl'
+                production: '<insert production client id>'
             }
 
             commit = true
