--- a/demo/button.htm
+++ b/demo/button.htm
@@ -6,11 +6,11 @@
 <script>
     paypal.Button.render({
 
-        env: 'production', // Optional: specify 'sandbox' environment
+        env: 'sandbox', // Optional: specify 'sandbox' environment
 
         client: {
             sandbox:    'AWi18rxt26-hrueMoPZ0tpGEOJnNT4QkiMQst9pYgaQNAfS1FLFxkxQuiaqRBj1vV5PmgHX_jA_c1ncL',
-            production: 'AVZhosFzrnZ5Mf3tiOxAD0M6NHv8pcB2IFNHAfp_h69mmbd-LElFYkJUSII3Y0FPbm7S7lxBuqWImLbl'
+            production: '<insert production client id>'
         },
 
         payment: function() {
