Use new client url builder and refactor types

--- a/test/windows/button/index.htm
+++ b/test/windows/button/index.htm
@@ -7,6 +7,6 @@
     </script>
 
     <script src="/base/test/tests/globals.js"></script>
-    <script src="/base/src/index.js"></script>
+    <script src="/base/test/paypal.js"></script>
     <script src="./index.jsx"></script>
 </body>
