--- a/test/integration/windows/checkout/index.htm
+++ b/test/integration/windows/checkout/index.htm
@@ -1,4 +1,3 @@
-
 <body>
     <script>
         window.mockDomain = 'mock://www.paypal.com';
@@ -7,7 +6,9 @@
         window.navigator.mockUserAgent = parentWindow.navigator.mockUserAgent;
     </script>
 
-    <script src="/base/test/tests/globals.js"></script>
+    <script src="/base/test/integration/globals.js"></script>
     <script src="/base/test/paypal.js"></script>
     <script src="./index.js"></script>
 </body>
+
+<h1>Checkout</h1>
