--- a/demo/dev/button.htm
+++ b/demo/dev/button.htm
@@ -3,62 +3,28 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="http://localhost:9000/checkout.js?client-id=sb" data-paypal-checkout data-env="demo"></script>
+    <script src="https://localhost.paypal.com:9000/sdk.js?client-id=alc_client1"></script>
+    <script src="https://localhost.paypal.com:9000/button.js"></script>
+    <script src="https://localhost.paypal.com:9000/jsx-pragmatic.js"></script>
 </head>
 
 <body>
-    <button id="paypal-button-popup">popup</button>
-    <button id="paypal-button-iframe">iframe</button>
-
     <script>
-        function restartFlow(checkout) {
-            return checkout.close().then(function() {
-                paypal.Checkout.contexts.iframe = true;
-                renderCheckout();
-                return new paypal.Promise();
-            });
-        }
+        document.write(button.Buttons({
+            ...xprops
+        }).render(jsx.html()));
 
-        function renderCheckout() {
-            paypal.Checkout.renderTo(window.top, {
-                env: window.xprops.env,
-                payment: window.xprops.payment,
-                onAuthorize: function(data, actions) {
+        document.querySelectorAll('[data-funding-source]').forEach(button => {
+            button.addEventListener('click', () => {
+                paypal.Checkout({
+                    createOrder: () => {
+                        return 'EC-XXXXXXXXXX';
+                    },
+                    onApprove: () => {
 
-                    var self = this;
-
-                    function restart() {
-                        return restartFlow(self);
                     }
-
-                    var payment = {
-                        execute: function() {
-                            return paypal.Promise.resolve({
-                                id: 'foo',
-                                intent: 'sale',
-                                state: 'authorized'
-                            });
-                        }
-                    };
-
-                    actions = {
-                        payment: payment,
-                        restart: restart
-                    };
-
-                    window.xprops.onAuthorize(data, actions);
-                }
+                }).renderTo(window.parent, 'body');
             });
-        }
-
-        document.querySelector('#paypal-button-popup').addEventListener('click', function() {
-            paypal.Checkout.contexts.iframe = false;
-            renderCheckout();
-        });
-
-        document.querySelector('#paypal-button-iframe').addEventListener('click', function() {
-            paypal.enableCheckoutIframe();
-            renderCheckout();
         });
     </script>
 </body>
