--- a/demo/dev/checkout.htm
+++ b/demo/dev/checkout.htm
@@ -3,13 +3,12 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="http://localhost:9000/checkout.js" data-paypal-checkout data-env="demo"></script>
+    <script src="https://localhost.paypal.com:9000/sdk.js?client-id=alc_client1"></script>
 </head>
 
 <body>
     <button id="paypal-pay">Pay</button><br />
     <button id="paypal-cancel">Cancel</button><br />
-    <button id="paypal-popout">Popout</button><br />
 
     <script>
         document.querySelector('#paypal-pay').addEventListener('click', function() {
@@ -27,15 +26,6 @@
                 paymentID: 'PAY-XXXXXXXXXXXXXXXX',
                 returnUrl: 'http://google.com?action=return&token=EC-XXXXXXXXXXXXXXXXX&PayerID=YYYYYYYYYYYYYYYYY',
                 cancelUrl: 'http://google.com?action=cancel&token=EC-XXXXXXXXXXXXXXXXX'
-            });
-        });
-
-        document.querySelector('#paypal-popout').addEventListener('click', function() {
-            window.xchild.hide();
-            paypal.Checkout.renderTo(window.top, {
-                env: window.xprops.env,
-                payment: window.xprops.payment,
-                onAuthorize: window.xprops.onAuthorize
             });
         });
     </script>
