Initial Mark component implementation

--- a/demo/dev/index.htm
+++ b/demo/dev/index.htm
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-    <div id="paypal-button-container"></div>
+    <p id="paypal-marks-container"></p>
+    <p id="paypal-buttons-container"></p>
 
     <script>
-        paypal.Buttons().render('#paypal-button-container');
+        paypal.Marks().render('#paypal-marks-container');
+        paypal.Buttons().render('#paypal-buttons-container');
     </script>
 </body>
