--- a/demo/vue.htm
+++ b/demo/vue.htm
@@ -41,7 +41,7 @@
             ],
           });
         },
-        onAuthorize: function (data, actions) {
+        onApprove: function (data, actions) {
           return actions.order.capture();
         },
       },
